--- a/beginner/calculator/pubspec.yaml
+++ b/beginner/calculator/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  math_expressions:
 
 
   # The following adds the Cupertino Icons font to your application.
